doc/errors.txt
./include/Engine.h: In constructor ‘Engine::Engine()’:
./include/Engine.h:39:25: error: invalid use of non-static member function
  state.pushState( start );
                         ^
